# embedX

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: latency_benchmark.py  run_benchmark.py
embedx/: __init__.py
embedx/api/: public.py
embedx/cache/: exact_cache.py  semantic_cache.py
embedx/cli/: main.py
embedx/dedup/: similarity.py
embedx/eval/: dataset.py  evaluator.py
embedx/index/: faiss_index.py  fallback_index.py
embedx/metrics/: cost.py  stats.py
embedx/providers/: base.py  local_model.py  openai_provider.py
embedx/ranking/: scorer.py
embedx/retrieval/: __init__.py  bm25.py  fusion.py  hybrid.py  reranker.py
embedx/storage/: sqlite_store.py
embedx/utils/: helpers.py  trace.py
examples/: advanced_usage.py  basic_usage.py  cost_savings_demo.py  eval_dataset.yaml  quickstart.py  semantic_search_demo.py
server/: main.py
tests/: conftest.py  test_cache.py  test_dedup.py  test_hybrid.py  test_memory.py  test_pipeline.py  test_ranking.py  test_server.py  test_storage.py  test_trace.py
vscode-extension/: package.json
vscode-extension/src/: api.ts  extension.ts
